scroll indicator visibility | images and texts fixed | navbar menu icon fixed | homepage title dimension fixed

--- a/src/app/components/ImageButton/ImageButton.module.css
+++ b/src/app/components/ImageButton/ImageButton.module.css
@@ -135,6 +135,7 @@
     max-width: 100%; /* Allow the image to take the full width in mobile layout */
     margin-right: 0; /* Remove margin for mobile layout */
     padding: 2rem;
+    align-self: center;
   }
 
   .blueCircleWrapper {
